--- a/config/nginx/www.conf
+++ b/config/nginx/www.conf
@@ -60,6 +60,12 @@ server {
     #    works correctly
       rewrite /wp-admin$ $scheme://$host$uri/ permanent;
 
+    location / {
+            # This is cool because no php is touched for static content.
+            # include the "?$args" part so non-default permalinks doesn't break when using query string
+            try_files $uri $uri/ /index.php?$args;
+    }
+
     location ~ \.php$ {
             fastcgi_pass   fastcgi_backend;
             fastcgi_index  index.php;
